@@ -2,6 +2,7 @@
 Timeout changed while searching for "bad FCS" to avoid problems in old systems
 WPS Reaver attacks modified to use --no-nacks (-N) argument
 Github issue template updated
+Check added to skip intro if not enough window size
 
 5.13
 WPS default timeouts changed
